Fix layout issues & refactor input code

--- a/client/stylesheets/global.css
+++ b/client/stylesheets/global.css
@@ -376,3 +376,8 @@ body {
   text-decoration: none;
   color: inherit;
 }
+
+.channel_name {
+  text-decoration: none;
+  color: inherit;
+}
